--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
 
 *{
-    margin:0;
-    padding:0;
-    border:0;
+  margin:0;
+  padding:0;
+  border:0;
 }
 
 body{
     font-family: Lato;
     color:#777777;
+    
 }
 #logo, #menu {
   line-height: 75px;
@@ -24,7 +25,7 @@ h2{
 #logo{
     float: left;
     font-size: 280%;
-    margin-left:30px;
+    margin-left:0;
 }
 
 #menu{
@@ -56,19 +57,21 @@ h2{
 #hikers-image{
   height:600px;
   width:100%;
-  background: url("https://images.unsplash.com/photo-1551632811-561732d1e306?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80") no-repeat center center ;
+  background: url("https://images.unsplash.com/photo-1551632811-561732d1e306?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80") fixed no-repeat center center ;
   background-size:cover;
 
   animation-name: hikers-zoom;
   animation-duration: 5s;
   animation-fill-mode: forwards;
+  
 
 }
 #outer-hikers-image {
   height:600px;
-  width:100%;
+ width:100%;
   overflow:hidden;
   position: relative;
+  
 }
 
 @keyframes hikers-zoom{
@@ -277,7 +280,7 @@ footer{
 @media screen and (max-width: 1200px){
    #info {
     width:65%;
-    height: 12000px;
+    height: 1200px;
     margin:0 auto;
   }
   #promo-question{
@@ -315,7 +318,7 @@ footer{
 
   }
   #cover-text{
-    left:0px;
+    
   }
   #info{
     width:90%;
